<resources>
    <string name="app_name">FireAlarm</string>
    <string name="_114">114</string>
    <string name="e_g_30">e.g. 30</string>
    <string name="e_g_80">e.g. 80</string>
    <string name="e_g_4095">e.g. 4095</string>
    <string name="e_g_592">e.g. 592</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_g_abc">e.g.abc</string>
    <string name="user">User</string>
    <string name="role">Role</string>
    <string name="admin">Admin</string>
    <string name="phone_number">Phone number</string>
    <string name="e_g_012">e.g.012...</string>
    <string name="device_id">Device id</string>
    <string name="device_name">Device name</string>
    <string name="adjust_the_threshold">Adjust the threshold</string>
    <string name="fire_sensor_threshold">Fire sensor threshold</string>
    <string name="smoke_sensor_threshold">Smoke sensor threshold</string>
    <string name="use_default_value">Use default value</string>
    <string name="cancel">Cancel</string>
    <string name="set_up">Set up</string>
    <string name="welcome_to_the_fire_alert_app">Welcome to the fire alert app!</string>
    <string name="please_choose_device">Please choose device</string>
    <string name="_continue">Continue</string>
    <string name="dashboard">Dashboard</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="fire">Fire</string>
    <string name="smoke">Smoke</string>
    <string name="buzzer">Buzzer</string>
    <string name="pump">Pump</string>
    <string name="adjust">Adjust</string>
    <string name="create_new_device">Create new device</string>
    <string name="create_new_user">Create new user</string>
    <string name="create">Create</string>
    <string name="call">Call</string>
    <string name="when_you_see_a_fire_or_an_accident">When you see a fire or an accident?</string>
    <string name="dial_114_to_report_to_the_fire_prevention_and_rescue_police_force">Dial *114* to report to the Fire Prevention and Rescue Police Force</string>
    <string name="list_device">List device</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="change_device">Change device</string>
    <string name="update_firmware">Update firmware</string>
    <string name="logout">Logout</string>
    <string name="list_user">List user</string>
    <string name="description">Description</string>
    <string name="no_device_found">No device found</string>
    <string name="no_user_found">No user found</string>
    <string name="firmware">Firmware</string>
    <string name="home">Home</string>
    <string name="control">Control</string>
    <string name="statistic">Statistic</string>
    <string name="setting">Setting</string>
    <string name="sensor">Sensor</string>
    <string name="_1_temperature_sensor">1. Temperature sensor</string>
    <string name="name_dht22t">Name: DHT22T</string>
    <string name="list_sensor">List sensor</string>
    <string name="unit_c">Unit: °C</string>
    <string name="_2_humidity_sensor">2. Humidity sensor</string>
    <string name="dht22h">Name: DHT22H</string>
    <string name="unit_rh">Unit: %RH</string>
    <string name="_3_fire_sensor">3. Fire sensor</string>
    <string name="name_mhs">Name: MHS</string>
    <string name="_4_smoke_sensor">4. Smoke sensor</string>
    <string name="name_mp2">Name: MP2</string>
    <string name="_5_buzzer">5. Buzzer</string>
    <string name="_6_pump">6. Pump</string>
    <string name="e_g_4500">e.g.4500</string>
    <string name="change_information">Change information</string>
    <string name="device_information">Device information</string>
    <string name="_description">Description:</string>
    <string name="sensor_information">Sensor information</string>
    <string name="current_firmware_version">Current firmware version</string>
    <string name="choose_firmware_version">Choose firmware version</string>
    <string name="update">Update</string>
    <string name="no_firmware_versions_found">No firmware versions found</string>
    <string name="firmware_versions">Firmware versions</string>
    <string name="create_firmware">Create Firmware</string>
    <string name="firmware_file">Firmware file</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_file">Select File</string>
    <string name="firmware_information">Firmware information</string>
    <string name="firmware_version">Firmware version</string>
    <string name="e_g_1_0_0">e.g.1.0.0</string>
    <string name="e_g_1">e.g.1</string>
    <string name="firmware_version_number">Firmware version number</string>
    <string name="release_at">Release at</string>
    <string name="download_url">Download url</string>
    <string name="status">Status</string>
    <string name="fire_notification">Fire notification</string>
    <string name="smoke_notification">Smoke notification</string>
    <string name="no_telemetry_found">No telemetry found.</string>
    <string name="name_device">Name device</string>
</resources>