<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.admin.firmware.create.CreateFirmwareFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_firmware"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHeight_percent="0.08"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <View
        android:id="@+id/closeBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.03"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/labelFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/firmware_file"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textFileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_file_selected"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@id/labelFile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSelectFile"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnSelectFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_file"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/button"
                app:layout_constraintTop_toBottomOf="@id/labelFile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleFirmware"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/firmware_information"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/cardFile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHeight_percent="0.1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/titleVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/firmware_version"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/titleFirmware"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHeight_percent="0.1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputVersionLayout"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleVersion"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/e_g_1_0_0"
            android:background="@drawable/input"
            android:padding="15sp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleVersionNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/firmware_version_number"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/inputVersionLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHeight_percent="0.1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputVersionNumberLayout"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleVersionNumber"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputVersionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/e_g_1"
            android:background="@drawable/input"
            android:padding="15sp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/inputVersionNumberLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHeight_percent="0.1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescriptionLayout"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleDescription"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/e_g_abc"
            android:background="@drawable/input"
            android:padding="15sp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Cancel button -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/control_item"
        app:layout_constraintTop_toBottomOf="@id/inputDescriptionLayout"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0" />

    <!-- Save button -->
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/button_blur"
        app:layout_constraintTop_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHorizontal_bias="1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
